<resources>
    <string name="app_name">myJourney</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="note">Note</string>
    <string name="delete">DELETE</string>
    <string name="selecttheaction">Select The Action</string>
    <string name="error">Error :</string>
    <string name="myjoureny">My Journey</string>
    <string name="colors">Colors :</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="rose">Rose</string>
    <string name="cyan">Cyan</string>
    <string name="entervalue">Enter Picture And Description</string>
    <string name="notetitle">Notes</string>
    <string name="done">Done</string>
    <string name="passnotmatch">Passwords are not Match</string>
    <string name="firebaseerror">FireStore Retrieve Error :</string>
    <string name="premissiondenied">Permission Denied</string>
    <string name="enterpicandname">Enter Picture and Name!</string>
    <string name="email">Your Email</string>
    <string name="password">Password</string>
    <string name="logintoaccount">Login To Account</string>
    <string name="newaccount">NEED AN ACCOUNT?</string>
    <string name="zip">Enter Address, City or Zip Code</string>
    <string name="description">Add Description</string>
    <string name="posthere">Post Here</string>
    <string name="addnotes">Add Notes :</string>
    <string name="yournoteshere">Your Notes here ...</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="createnewaccount">Create New Account</string>
    <string name="alreadygotone">Already Have An Account?</string>
    <string name="yourname">Your Name..</string>
    <string name="savesetting">Save Account Settings</string>
    <string name="desc">Description</string>
    <string name="username">UserName</string>
    <string name="date">Date</string>
    <string name="input">Input</string>
    <string name="deletepost">Delete Post</string>
    <string name="loadcomments">Loading Comment...</string>
    <string name="updated">Updated!</string>
    <string name="locationerror">Couldn\'t get your loctation,please find it by yourself</string>
</resources>
