<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/main_journey_post"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/journey_user_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/profile_placeholder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/journey_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/username"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/journey_user_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/journey_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/date"
                app:layout_constraintStart_toEndOf="@+id/journey_user_image"
                app:layout_constraintTop_toBottomOf="@+id/journey_username" />

            <ImageView
                android:id="@+id/journey_image"
                android:layout_width="0dp"
                android:layout_height="268dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/journey_user_image"
                app:srcCompat="@drawable/image_placeholder" />

            <TextView
                android:id="@+id/journey_desc"
                android:layout_width="336dp"
                android:layout_height="27dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/input"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/journey_image"
                app:layout_constraintVertical_bias="0.075" />

            <ImageView
                android:id="@+id/comment_btn"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:cropToPadding="false"
                android:padding="2dp"
                app:layout_constraintTop_toBottomOf="@+id/journey_desc"
                app:srcCompat="@mipmap/action_comment"
                tools:layout_editor_absoluteX="294dp" />

            <TextView
                android:id="@+id/comments_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Notes"
                app:layout_constraintEnd_toStartOf="@+id/comment_btn"
                app:layout_constraintTop_toBottomOf="@+id/journey_desc" />

            <Button
                android:id="@+id/delete_post_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/white"
                android:enabled="false"
                android:text="@string/deletepost"
                android:textAllCaps="false"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/journey_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>